# frc_season_map

./: .gitignore  Cargo.toml  README.md  add_team.py  make_map.py  pyproject.toml  requirements.txt  validate_json.py
.github/ISSUE_TEMPLATE/: incorrect-location.md
.github/workflows/: json-validation.yml
data/: count_collisions.py  frcmap.py  get_team_locations.py  locations_utils.py  main.py  settings.py
data/data/: active_teams_2019.json  all_team_locations.json  all_team_locations_2019.json  all_team_locations_2020.json  all_team_locations_2021.json  all_team_locations_2022.json  team_events_2019.json
data/jsonloader/: __init__.py
data/locations/: teams.toml
data/tbahelper/: __init__.py
docs/: CNAME  index.html  jsconfig.json
docs/css/: main.css  mobile.css
docs/data/: season_2019.json  season_2020.json  season_2022.json  season_2023.json  season_2023_pretty.json  season_2024.json  season_2024_pretty.json  season_2025.json  season_2025_pretty.json  season_2026.json  season_2026_pretty.json
docs/js/: gradients.js  map.js
frcmap/: cli.py  frcmap.py
frcmap/firstapi/: __init__.py  firstapi.py
frcmap/frcgeocoder/: __init__.py  geocoder.py
frcmap/tbahelper/: __init__.py  event_type.py  tbahelper.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: map.js
locations/: events.json  events.toml  teams.json  teams.toml
locations/archive/: all_event_locations.json  all_team_locations_2022.json  all_team_locations_2023.json  all_team_locations_2024.json  (+2 more)
src/: config.rs  frcmap.rs  http_client.rs  main.rs  map_types.rs
(+9 files in other folders)
